--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -203,7 +203,7 @@
 
 /* #Forms
 ================================================== */
-
+/*
 	form {
 		margin-bottom: 20px; }
 	fieldset {
@@ -255,8 +255,9 @@
 		font-size: 13px;
 		color: #444; }
 
+*/
 /* #Misc
-================================================== */
+================================================== 
 	.remove-bottom { margin-bottom: 0 !important; }
 	.half-bottom { margin-bottom: 10px !important; }
 	.add-bottom { margin-bottom: 20px !important; }
@@ -265,7 +266,6 @@
 
   /* #Syntax highlighting
   ================================================== */
-
 
 .highlight {
   color: #f8f8f2;
