--- a/combo.css
+++ b/combo.css
@@ -1,5 +1,7 @@
 ---
 ---
+{% include css/custom.css %}
+{% include css/main.css %}
 {% include css/base.css %}
 {% include css/skeleton.css %}
-{% include css/main.css %}
+
