--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -72,7 +72,7 @@
 	h6 { font-size: 14px; line-height: 21px; }
 	.subheader { color: #777; }
 
-	p { margin: 0 0 20px 0; }
+	p { margin: 0 0 0px 0; }
 	p img { margin: 0; }
 	p.lead { font-size: 21px; line-height: 27px; color: #777;  }
 
@@ -260,10 +260,8 @@
 ================================================== 
 	.remove-bottom { margin-bottom: 0 !important; }
 	.half-bottom { margin-bottom: 10px !important; }
-	.add-bottom { margin-bottom: 20px !important; }
-
-
-
+	.add-bottom { margin-bottom: 20px !important; 
+		
   /* #Syntax highlighting
   ================================================== */
 
