--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -315,6 +315,11 @@ nav ul li:hover, nav ul li.active {
 /* tiny size (phones) */
 @media only screen and (max-width: 380px) {
   nav ul li { min-width:90px; line-height:20px; }
+
+  .check {
+    margin-left: -100px;
+  }
+
 }
 
 /* anything not desktop */
