--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,5 +1,5 @@
 .help-text {
- font-size:	14px;
+ font-size:	15px;
  font-style: italic;
 }
 
@@ -112,4 +112,8 @@
 
 .email-group {
 	background-color: rgba(193, 66, 66, 0.3)
+}
+
+.social-icon {
+	font-size:50px;
 }
