question mark color changed

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 .help-question {
-	color:yellow;
+	color:#FF820D;
 	font-size:300px;
 	margin-top:-65px;
 }
@@ -73,7 +73,7 @@
 }
 
 .contact-help {
-	color:white;
+	color:#FF820D;
 	font-size:100px;
 }
 
