--- a/_includes/msgmodal.html
+++ b/_includes/msgmodal.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Trigger the modal with a button -->
-  <button type="button" id={{include.id}} class="btn btn-info btn-lg" data-toggle="modal" data-target={{include.targetid}}></button>
+  <button type="button" id={{include.openmodelid}} class="btn btn-info btn-lg" data-toggle="modal" data-target={{include.targetid}}></button>
   <!-- Modal -->
   <div class="modal fade" id={{include.modalid}} role="dialog">
     <div class="modal-dialog">
@@ -12,7 +12,7 @@
           </h2>
           <br>
           <div class="text-center">
-          <button type="button" class="btn btn-lg btn-log" id={{include.next-modal}}>NEXT>></button>
+          <button type="button" class="btn btn-lg btn-log" id={{include.modal_body_btn}}>{{ include.btn_name }}</button>
           </div>
         </div>
         <div class="modal-footer">
